--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.5.3",
+    "@mui/styles": "^5.5.3",
+    "classnames": "^2.3.1",
     "next": "12.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
